src/part3/advanced-features/hpa-demo-app.yaml
# HPAのデモで利用するCPU負荷をかけるアプリのDeployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-demo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hpa-demo
  template:
    metadata:
      labels:
        app: hpa-demo
    spec:
      containers:
        - name: hpa-example
          image: k8s.gcr.io/hpa-example
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 200m # CPUリソースの要求量を指定
---
apiVersion: v1
kind: Service
metadata:
  name: hpa-demo-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: hpa-demo
